Add security-rules.json and move to www/

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "authors": [
     "Matt Haggard <haggardii@gmail.com>"
   ],
+  "directory": "www/bower_components/",
   "license": "MIT",
   "private": true,
   "ignore": [
